# patterson_xrr

./: .gitignore  README.md  example.ipynb  pattersonFunction.ipynb  pyproject.toml
.claude/: settings.local.json
patterson/: __init__.py  core.py  example_data.xrr  plot.py  utils.py
